run action on commit

--- a/.github/workflows/build-corne.yml
+++ b/.github/workflows/build-corne.yml
@@ -1,5 +1,7 @@
 name: 'Build corne nice_nano display'
-on: workflow_dispatch
+on:
+  - workflow_dispatch
+  - push
 jobs:
   build:
     uses: ./.github/workflows/main.yml
